# Secure-Hot-Wallet-in-Rust-

./: CONTRIBUTING.md  Cargo.toml  README.md  main.rs
.github/workflows/: codeql-analysis.yml  super-linter.yml
docs/: ARCHITECTURE.md  COMPLIANCE.md  ECOLOGY.md  PERFORMANCE.md  RELEASE.md  SECURITY.md
examples/: basic_usage.rs
src/: main.rs
src/audit/: alert.rs  confirmation.rs  logging.rs  middleware.rs  operation_log.rs  rollback.rs
src/config/: config.rs  di_container.rs  env_config.rs  service.rs
src/core/: adapter.rs  application.rs  domain.rs  infrastructure.rs  interface.rs
src/i18n/: localization.rs
src/network/: node_manager.rs  rate_limit.rs
src/ops/: backup.rs  health.rs  metrics.rs
src/plugin/: event_bus.rs  generator.rs  middleware.rs  plugin.rs  plugin_manager.rs
src/security/: access_control.rs  anti_debug.rs  compliance.rs  encryption.rs  memory_protection.rs  mod.rs
src/tools/: async_support.rs  error.rs  generator.rs  mod.rs
tests/: security_test.rs
